# terpsearch

./: .gitignore  Dockerfile  Makefile  README.md  app.py  confidence_summary.csv  docker-compose.yml  pyproject.toml  requirements.txt  run.py  setup.py  terpsearch-celery-task-def.json  terpsearch-fastapi-task-def.json  terpsearch-flask-task-def.json
.github/workflows/: aws_ecs_deploy.yaml
app/: analyzer.py  categorizer.py  confidenceScore_logger.py  data.py  dynamodb_client.py  fastapi_app.py  flask_app.py  logger_config.py  mock_data.py  results.csv
app/templates/: index.html
fastapi_categorizer/: Dockerfile  categorizer.py  celery_worker.py  fastapi_app.py  requirements.txt  threshold_tuning_confidence.csv  threshold_tuning_confidence.py
setup_scripts/: build_terpsearch_library.sh  create_ecs_services.sh  push_dynamodb_image.sh  vpc_security_groups_setup.sh
terpsearch/constants/: DynamoDbConstants.py
terpsearch/dynamodb/: BskySessionEncryptor.py  TerpSearchDb.py  dynamodb_helpers.py
terpsearch/dynamodb/tables/: AppLoginTable.py  BskyPostsTable.py  BskyUsersTable.py
terpsearch/search/: bskySearch.py
terpsearch/website/: __init__.py  auth.py  models.py  trends.py  views.py
terpsearch/website/templates/: base.html  category_chart.html  home.html  link_bluesky.html  search_results.html  sign_up.html  task_status.html  trends_base.html
